changed design of register page

--- a/templates/job.html
+++ b/templates/job.html
@@ -82,7 +82,7 @@
        <div class="form-items" style=" margin-top:5rem;">
 
           <form action="{{url_for('add_job')}}" method="POST" class="was-validated" on method="post">
-            <h3 class="header">Add New Details</h3>
+            <h3 class="header">Add Job Details</h3>
 
              <div class="col-md-4">
 	      {% with messages = get_flashed_messages()  %}
