--- a/templates/placed.html
+++ b/templates/placed.html
@@ -16,8 +16,8 @@
 }
 .btn {
   position: relative;
-  width: 50%;
-  height: 60px;
+  width: 90%;
+  height: 90%;
   overflow: hidden;
   border: none;
   border-radius: none;
@@ -38,7 +38,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  content: 'You have been Placed';
+  content: 'You have been Placed 🎉️!!!';
+  font-size:50px;
   transition: all .3s;
 
 }
@@ -52,14 +53,17 @@
   width: 100%;
   height: 100%;
   content: 'Click Me to go Back to HomePage';
+  font-size:50px;
+  opacity:0;
   transition: all .3s;
 }
 .btn:hover::before {
   top: -60px;
-
+  opacity:0;
 }
 .btn:hover::after {
   top: 0;
+  opacity:1;
 }
 
 
