--- a/templates/stats.html
+++ b/templates/stats.html
@@ -177,12 +177,18 @@
          </button>
        </div>
        <div class="modal-body">
-        <form action="{{url_for('add_stats')}}" method="POST">
+        <form action="{{url_for('add_stats')}}" method="POST" class="was-validated" on method="post">
             <div class="form-group">
-            <input type="text" class="form-control" name="job_Id" placeholder="Job ID" required>
+            <input type="text" class="form-control" name="job_Id" placeholder="Job ID" minlength="5" maxlength="6" required>
+            <div class="valid-feedback">JobID field is valid!</div>
+            <div class="invalid-feedback">JobID field cannot be blank!</div>
+                   
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" name="regNo" placeholder="Reg. No." required>
+            <input type="text" class="form-control" name="regNo" placeholder="Reg. No." oninput="this.value = this.value.toUpperCase()" minlength="5" maxlength="6" required>
+            <div class="valid-feedback">RegNo field is valid!</div>
+            <div class="invalid-feedback">RegNo field cannot be blank!</div>
+            
           </div>
           <button class="btn btn-primary btn-block">
             Save
