postjob courses issue resolved

--- a/templates/job.html
+++ b/templates/job.html
@@ -125,58 +125,29 @@
 
              <div class="form-group" >
 
-                <label class="container">Bachelor of Technology, Mechanical Engineering
-            		  <input type="checkbox" name="Eligibility" value="Bachelor of Technology, Mechanical Engineering">
-            		  <span class="checkmark"></span>
-            		</label>
-
-            		<label class="container">Bachelor of Technology, Chemical Engineering
-            		  <input type="checkbox" name="Eligibility" value="Bachelor of Technology, Chemical Engineering">
-            		  <span class="checkmark"></span>
-            		</label>
-
-            		<label class="container">Bachelor of Technology, Computer Science Engineering
-            		  <input type="checkbox" name="Eligibility" value="Bachelor of Technology, Computer Science Engineering">
-            		  <span class="checkmark"></span>
-            		</label>
-
-            		<label class="container">Bachelor of Technology, Electrical Engineering
-            		  <input type="checkbox" name="Eligibility" value="Bachelor of Technology, Electrical Engineering">
+                <label class="container">Bachelor of Technology, Electrical Engineering
+            		  <input type="checkbox" name="Eligibility" value= "BTech-EE">
             		  <span class="checkmark"></span>
             		</label>
 
             		<label class="container">Bachelor of Technology, Electronics and Communication Engineering
-            		  <input type="checkbox" name="Eligibility" value="Bachelor of Technology, Electronics and Communication Engineering">
+            		  <input type="checkbox" name="Eligibility" value="BTech-ECE">
             		  <span class="checkmark"></span>
             		</label>
+
+            		<label class="container">Bachelor of Technology, Computer Science Engineering
+            		  <input type="checkbox" name="Eligibility" value="BTech-CS">
+            		  <span class="checkmark"></span>
+            		</label>
+
 
             		<label class="container">Master in Computer Applications
-            		  <input type="checkbox" name="Eligibility" value="Master in Computer Applications">
-            		  <span class="checkmark"></span>
-            		</label>
-
-            		<label class="container">Master of Technology, Mechanical Engineering
-            		  <input type="checkbox" name="Eligibility" value="Master of Technology, Mechanical Engineering">
-            		  <span class="checkmark"></span>
-            		</label>
-
-            		<label class="container">Master of Technology, Chemical Engineering
-            		  <input type="checkbox" name="Eligibility" value="Master of Technology, Chemical Engineering">
+            		  <input type="checkbox" name="Eligibility" value="MCA">
             		  <span class="checkmark"></span>
             		</label>
 
             		<label class="container">Master of Technology, Computer Science Engineering
-            		  <input type="checkbox" name="Eligibility" value="Master of Technology, Computer Science Engineering">
-            		  <span class="checkmark"></span>
-            		</label>
-
-            		<label class="container">Master of Technology, Electrical Engineering
-            		  <input type="checkbox" name="Eligibility" value="Master of Technology, Electrical Engineering">
-            		  <span class="checkmark"></span>
-            		</label>
-
-            		<label class="container">Master of Technology, Electronics and Communication Engineering
-            		  <input type="checkbox" name="Eligibility" value="Master of Technology, Electronics and Communication Engineering">
+            		  <input type="checkbox" name="Eligibility" value="MTech-CS">
             		  <span class="checkmark"></span>
             		</label>
 
