--- a/templates/login.html
+++ b/templates/login.html
@@ -7,24 +7,24 @@
   <meta charset="utf-8">
   <title>Login</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-  
+
  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
- 
+
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
- 
+
  <style>
- 
- 
+
+
         html, body {
             height: 100%;
             background-color: ;
-          
+
         }
-        
+
         .header{
             font-family: 'Poppins', sans-serif;
             font-weight: 400;
@@ -42,10 +42,10 @@
             justify-content: center;
             align-items: center;
             text-align: center;
-           
+
         }
 
- 
+
      .container2 {
 	    border: 3px solid #fff;
 	    padding: 40px;
@@ -57,7 +57,7 @@
 	    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px;
 	    border-radius: 10px;
 	    text-align: left;
-	    
+
 	}
 
 	.form-control h3 {
@@ -67,25 +67,25 @@
 	    font-weight: 800;
 	    margin-bottom: 5px;
 	}
-	
-	::-webkit-input-placeholder { 
+
+	::-webkit-input-placeholder {
            color:    red;
            font-size: 18px;
         }
-	
+
 	.form-control{
 	   height:3em;
 	   font-size:17px;
 	}
-	
+
 	.form-check,p{
 	   font-size:17px;
 	}
-	
+
 	.alert{
 	   font-size:17px;
 	}
-	
+
 <style media="screen">
 	*,*:before,*:after{
 	    padding: 0;
@@ -178,7 +178,7 @@
 	::placeholder{
 	    color: grey;
 	}
-	
+
 	.btn{
 	    width: 100%;
 	    background-color: #393e46;
@@ -189,16 +189,16 @@
 	    border-radius: 5px;
 	    cursor: pointer;
 	}
-	
-	
+
+
  </style>
- 
+
  </head>
- 
+
 <body>
 <!--
   <div class="login-box" >
-  
+
  <section class="vh-100">
   <div class="container-fluid h-custom">
     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -222,7 +222,7 @@
             <div class="valid-feedback">Password field is valid!</div>
                    <div class="invalid-feedback">Password field cannot be blank!</div>
             </div>
-          
+
 
           <div class="d-flex justify-content-between align-items-center">
             <div class="form-check mb-0">
@@ -236,33 +236,33 @@
           <div class="text-center text-lg-start mt-4 pt-2">
             <input type="submit" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;" value="Login" class="form-control btn btn-success " name="">
           </div>
-          
+
 
         </form>
-            
-            
+
+
        {% with messages = get_flashed_messages()  %}
           {% if messages %}
           {% for message in messages %}
-          
+
            <div class="alert alert-success alert-dismissible">
               <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-              <strong>{{ message }}</strong> 
+              <strong>{{ message }}</strong>
            </div>
          {% endfor %}
          {% endif %}
        {% endwith %}
-       
-       
+
+
             <p class="medium fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="{{ url_for('register') }}" class="link-danger">Register</a></p>
           </div>
-    
+
       </div>
     </div>
 </section>
- 
+
  -->
- 
+
  <div class="background">
         <div class="shape"></div>
         <div class="shape"></div>
@@ -270,7 +270,7 @@
     <form class="form-group" action="{{ url_for('login') }}" method="post" class="was-validated" on method="post">
         <h3>Student Login</h3>
 
-        <label for="username">Username</label>
+        <label for="username">Registration Number</label>
         <div class="form-outline mb-4">
             <input type="text" id="username" class="form-control form-control-lg"
               placeholder="Enter valid Registration Number" name="username" oninput="this.value = this.value.toUpperCase()" minlength="9" maxlength="9"  required />
@@ -285,7 +285,7 @@
             <div class="valid-feedback">Password field is valid!</div>
                    <div class="invalid-feedback">Password field cannot be blank!</div>
             </div>
-          
+
 
          <div class="d-flex justify-content-between align-items-center">
             <div class="form-check mb-0">
@@ -299,29 +299,28 @@
           <div class="text-center text-lg-start mt-4 pt-2">
             <input type="submit" class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;" value="Login" class="form-control btn btn-success " name="">
           </div>
-          
+
           {% with messages = get_flashed_messages()  %}
           {% if messages %}
           {% for message in messages %}
            <div class="alert alert-success alert-dismissible" style="background:red; margin-top:15px;">
-                  <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> 
-                  <strong style="color: white;">{{ message }}</strong> 
+                  <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                  <strong style="color: white;">{{ message }}</strong>
            </div>
          {% endfor %}
          {% endif %}
-       {% endwith %}    
-       
-       
+       {% endwith %}
+
+
          <div style="display:flex; flex-direction:row; align-items:center; justify-content:center;">
             <p class="medium fw-bold mt-2 pt-1 mb-0" style="color:#111; display:flex; flex-direction:row; align-items:center; justify-content:center;">Don't have an account? <a href="{{ url_for('register') }}" class="link-danger">Register</a></p>
           </div>
-    
+
     </form>
- 
- 
- 
+
+
+
  </body>
 </html>
 
 {% endblock %}
-
