--- a/templates/intern.html
+++ b/templates/intern.html
@@ -49,11 +49,11 @@
 
             <div class="col-md-12 mt-3">
                     <label class="mb-3 mr-1" for="type">PPO? </label>
-                    <input type="radio" class="btn-check" name="ppo" id="ppo" value="yes" autocomplete="off" required>
-                    <label class="btn btn-sm btn-outline-secondary" for="ppo">Yes</label>
+                    <input type="radio" class="btn-check" name="ppo" id="Yes" value="yes" autocomplete="off" required>
+                    <label class="btn btn-sm btn-outline-secondary" for="Yes">Yes</label>
 
-                    <input type="radio" class="btn-check" name="ppo" id="ppo" value="no" autocomplete="off" required>
-                    <label class="btn btn-sm btn-outline-secondary" for="ppo">No</label>
+                    <input type="radio" class="btn-check" name="ppo" id="No" value="no" autocomplete="off" required>
+                    <label class="btn btn-sm btn-outline-secondary" for="No">No</label>
 
                     <div class="valid-feedback mv-up">You selected a Type!</div>
                     <div class="invalid-feedback mv-up">Please select a Type!</div>
