--- a/templates/placed.html
+++ b/templates/placed.html
@@ -38,7 +38,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  content: 'You have been Placed 🎉️!!!';
+  content: 'Congratulations, You have been Placed 🎉️!!!';
   font-size:50px;
   transition: all .3s;
 
