--- a/templates/stats.html
+++ b/templates/stats.html
@@ -232,11 +232,10 @@
 </button>
 
   <h2>Full Time</h2>
-      <table class="example table table-striped table-bordered">
-       <tbody>
-
+      <table  class="example table table-striped table-bordered" >
+         <tbody>
             <th>Roll No.</th>
-            <th>FirstName</th>>
+            <th>FirstName</th>
             <th>LastName</th>
             <th>Job ID</th>
             <th>Company Name</th>
