--- a/templates/viewjobs.html
+++ b/templates/viewjobs.html
@@ -136,7 +136,7 @@
               <h5>Mininum CGPA Required:</h5> {{ej[4]}}<br>
             </div>
             <div class="sameline2">
-              <h5>Stipend:</h5> {{ej[7]}}<br>
+              <h5>Package:</h5> {{ej[7]}}<br>
               <h5>Location:</h5> {{ej[5]}}<br>
             </div>
            </div>
